--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #1f1f1f;
     margin: 0;
     font: 12px/18px 'Open Sans',"Lucida Grande","Lucida Sans Unicode",Arial,Helvetica,Verdana,sans-serif;
 }
@@ -44,8 +45,8 @@ pre {
     float: right;
 }
 .page_wrap {
-    background-color: #ffffff;
-    color: #000000;
+    background-color: #1f1f1f;
+    color: #cccccc;
 }
 .page_wrap a {
     color: #168acd;
@@ -57,9 +58,9 @@ pre {
 .page_header {
     position: fixed;
     z-index: 10;
-    background-color: #ffffff;
+    background-color: #1f1f1f;
     width: 100%;
-    border-bottom: 1px solid #e3e6e8;
+    border-bottom: 1px solid #70777b;
 }
 .page_header .content {
     width: 480px;
@@ -72,7 +73,7 @@ pre {
     background-size: 24px 24px;
 }
 .bold {
-    color: #212121;
+    color: #70777b;
     font-weight: 700;
 }
 .details {
@@ -89,8 +90,13 @@ pre {
     padding: 24px 24px 22px 82px;
 }
 .page_body {
+    background-color: #1f1f1f;
     padding-top: 64px;
-    width: 480px;
+    width:  90%;
+    max-width: 480px;
+    margin: 0 auto;
+    padding-left: 5%;
+    padding-right: 5%;
     margin: 0 auto;
 }
 .page_about {
@@ -150,7 +156,7 @@ pre {
 .color_purple,
 .userpic5,
 .media_game .fill {
-    background-color: #9884e8;
+    background-color: #4c407b;
 }
 .color_pink,
 .userpic6,
@@ -235,6 +241,7 @@ a.expanded {
     font-size: 18px;
 }
 .list_page .entry .body {
+    background-color: #1f1f1f;
     margin-left: 66px;
 }
 .list_page .entry .name {
@@ -266,6 +273,7 @@ div.selected {
     padding: 10px 24px;
 }
 .service .body {
+    background-color: #1f1f1f;
     text-align: center;
 }
 .service .userpic_wrap {
@@ -295,6 +303,7 @@ div.selected {
     font-weight: normal;
 }
 .default .body {
+    background-color: #1f1f1f;
     margin-left: 60px;
 }
 .default .text {
@@ -407,6 +416,7 @@ div.selected {
     transition: opacity 3.0s ease;
 }
 .toast_body {
+    background-color: #1f1f1f;
     margin: 0 -50%;
     float: left;
     border-radius: 15px;
